--- a/Projects/Project-Design-Development/employee/templates/employee/employee_loginpage.html
+++ b/Projects/Project-Design-Development/employee/templates/employee/employee_loginpage.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap icons CDN link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>
-        Login | Tops Technoly
+        Login | Tops Technololy
     </title>
 </head>
 <body>
@@ -42,7 +42,7 @@
                                 {% endif %}
                                 <!-- end message section -->
                                 
-                                <form action="" method="post" autocomplete="off">
+                                <form action="" method="POST" autocomplete="off">
                                     {% csrf_token %}
                                     <div class="form-outline mb-2">
                                         <input type="text" class="form-control form-control-lg" name="employee_id" placeholder="EMP000...">
