--- a/Assessments/Python/Python-DbAndPythonFramework-IndustryProgram/society/templates/society/society_watchmans.html
+++ b/Assessments/Python/Python-DbAndPythonFramework-IndustryProgram/society/templates/society/society_watchmans.html
@@ -80,7 +80,45 @@ Watchman
                 </div>
               </div>
             </div>
-            <a href="" class="btn btn-warning">Edit</a>
+            
+            {% comment %} button for edit watchman details {% endcomment %}
+            <a href="" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editwatchman{{watchman.watchman_id}}">Edit</a>
+            
+            <!-- Modal for edit watchman details-->
+            <div class="modal fade" id="editwatchman{{watchman.watchman_id}}" tabindex="-1" aria-labelledby="editwatchman{{watchman.watchman_id}}" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="editwatchmanLabel">Edit Watchman</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form action="{% url "watchman_update_view" watchman_id=watchman.watchman_id %}" method="post">
+                      {% csrf_token %}
+                      <label for="watchman_id">Watchman ID:</label>
+                      <input type="text" value="{{watchman.watchman_id}}" id="" disabled>
+                      <br>
+                      <label for="first_name">First Name</label>
+                      <input type="text" name="first_name" value="{{watchman.first_name}}" id="">
+                      <br>
+                      <label for="last_name">Last Name:</label>
+                      <input type="text" name="last_name" value="{{watchman.last_name}}" id="">
+                      <br>
+                      <label for="email">Email:</label>
+                      <input type="email" name="email" value="{{watchman.email}}" id="">
+                      <br>
+                      <label for="mobile">Mobile:</label>
+                      <input type="text" name="mobile" value="{{watchman.mobile}}" id="">
+                      <br>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-success">Save</button>
+                    </div>
+                  </form>
+                  </div>
+                </div>
+              </div>
+            </div>
         </td>
       </tr>
       {% endfor %}
