--- a/Projects/Project-Design-Development/employee/templates/employee/employee_studentdetailview.html
+++ b/Projects/Project-Design-Development/employee/templates/employee/employee_studentdetailview.html
@@ -4,19 +4,310 @@
 Student Details
 {% endblock %}
 
+{% block style %}
+<style>
+    .profile-header {
+        position: relative;
+        background-color: #f8f9fa;
+        padding: 30px 0;
+        text-align: center;
+    }
+
+    .profile-header img {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        border: 5px solid #fff;
+  
+    }
+
+    .profile-header h2 {
+        margin-top: 15px;
+    }
+
+    .profile-header p {
+        margin-bottom: 0;
+    }
+
+    .profile-content {
+        margin-top: -50px;
+    } 
+    
+</style>
+{% endblock %}
+
 {% block content %}
-<div class="card mb-3 mt-3">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <h3>Student Personal Information</h2>
+
+<div class="container my-5">
+    <div class="text text-center">
+      <div class="profile-header">
+          {% if student_profile.status_code != 404 %}
+          <img src="{{student_profile.image.url}}" alt="Profile Picture" > 
+          <h2>{{student.first_name|title}} {{student.last_name|title}}</h2>
+          <p>{{student.student_id}}</p>
       </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div> 
+
+    {% comment %} for student profile {% endcomment %}
+    <div class="profile-content bg-white p-4 shadow-sm rounded">
+        
+        <h4 class="mt-5 text-primary text-decoration-underline">Profile Details</h4>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>Email:</strong>
+            </div>
+            <div class="col-md-8">
+                {{student.email}}
+            </div>
         </div>
-      </div>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>Mobile:</strong>
+            </div>
+            <div class="col-md-8">
+                {{student.mobile}}
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>Gender:</strong>
+            </div>
+            <div class="col-md-8">
+                {% if student_profile.gender == 'male' %}
+                Male
+                {% elif student_profile.gender == 'female' %}
+                Female
+                {% else %}
+                Other
+                {% endif %}
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>Date of birth:</strong>
+            </div>
+            <div class="col-md-8">
+                {{ student_profile.date_of_birth }}
+            </div>
+        </div>
+        {% else %}
+        <div class="row mt-5 mb-3">
+            <div class="col-md-4">
+                <strong>{{student_profile.message}}</strong>
+            </div>
+        </div>
+        {% endif %}
     </div>
-  </div>
+
+    {% comment %} for student address {% endcomment %}
+    <div class="profile-content bg-white p-4 shadow-sm rounded">
+        {% if student_course.status_code != 404 %}
+        <h4 class="mt-5 text-primary text-decoration-underline">Address Details</h4>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>address</strong>
+            </div>
+            <div class="col-md-8">
+                {{student_address.address}}
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>country :</strong>
+            </div>
+            <div class="col-md-8">
+                {{student_address.country}}
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>state :</strong>
+            </div>
+            <div class="col-md-8">
+                {{student_address.state}}
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>city :</strong>
+            </div>
+            <div class="col-md-8">
+                {{ student_address.city }}
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <strong>pincode::</strong>
+            </div>
+            <div class="col-md-8">
+                {{ student_address.pincode }}
+            </div>
+        </div>
+        {% else %}
+        <div class="row mt-5 mb-3">
+            <div class="col-md-4">
+                <strong>{{student_address.message}}</strong>
+            </div>
+        </div>
+        {% endif %}
+    </div>
+
+    {% comment %} for student course {% endcomment %}
+    <div class="profile-content bg-white p-4 shadow-sm rounded">
+      {% if student_course.status_code != 404 %}
+      <h4 class="mt-5 text-primary text-decoration-underline">Course Details</h4>
+      <div class="row mb-3">
+          <div class="col-md-4">
+              <strong>Technology Name</strong>
+          </div>
+          <div class="col-md-8">
+              {{student_course.technology_id}}
+          </div>
+      </div>
+      <div class="row mb-3">
+          <div class="col-md-4">
+              <strong>Batch Start Date</strong>
+          </div>
+          <div class="col-md-8">
+              {{student_course.batch_start_date}}
+          </div>
+      </div>
+      <div class="row mb-3">
+          <div class="col-md-4">
+              <strong>Batch End Date</strong>
+          </div>
+          <div class="col-md-8">
+              {{student_course.batch_end_date}}
+          </div>
+      </div>
+      <div class="row mb-3">
+          <div class="col-md-4">
+              <strong>Batch Status :</strong>
+          </div>
+          <div class="col-md-8">
+            {% if student_course.batch_status == 'S' %}
+            Batch Start
+            {% else %}
+            Batch End
+            {% endif %}
+          </div>
+      </div>
+      {% else %}
+      <div class="row mt-5 mb-3">
+          <div class="col-md-4">
+              <strong>{{student_course.message}}</strong>
+          </div>
+      </div>
+      {% endif %}
+    </div>
+    
+    {% if student_payment.status_code != 404  %}
+      <h4 class="mt-5">Fees account -
+        {% if student_payment.status == 'I' %}
+        <span class="badge bg-danger">Pending</span>
+        {% elif student_payment.status == 'C' %}
+        <span class="badge bg-success">Paid</span>
+        {% elif student_payment.status == 'P' %}
+        <span class="badge bg-warning">Partially paid</span>
+        {% endif %}
+      </h4>
+      
+      <div class="row d-flex justify-content-end">
+        {% if student_payment.remaining_fees != 0.00 %} 
+          <div class="col-lg-10 col-md-10  my-2">
+            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                <button type="button" class="btn btn-outline-dark">Total fees -
+                    {{student_payment.total_fees}}</button>
+                <button type="button" class="btn btn-outline-dark">Remaining fees -
+                    {{student_payment.remaining_fees}}</button>
+                <button type="button" class="btn btn-outline-dark">Paid fees -
+                    {{student_payment.paid_fees}}</button>
+            </div> 
+          </div>
+            <div class="col-lg-2 col-md-2">
+                {% comment %} Add Fees Button {% endcomment %}
+                <div class="mb-3">
+                    <a href="" class="w-100 btn btn-success mb-1" data-bs-toggle="modal"
+                        data-bs-target="#addfees">
+                        <i class="bi bi-plus"></i> Add fees </a>
+
+                    {% comment %} fees add model {% endcomment %}
+                    <div class="modal fade" id="addfees" tabindex="-1" aria-labelledby="addfees" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="addfees">Add Student Fees</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><button>
+                        </div>
+                        <form action="{% url 'student_payment_entry_view' %}" method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+
+                            <div class="modal-body">
+                                <input name="student_id" value="{{student.student_id}}" disabled>
+                                <input type="hidden" name="student_id" value="{{student.student_id}}">
+                                <div class="mb-3">
+                                    <label for="proof">Screen Shot</label>
+                                    <input type="file" name="proof" id="proof" class="form-control">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="date">Paid date</label>
+                                    <input type="date" name="paid_date" id="date" class="form-control">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="installment">Paid installment</label>
+                                    <input type="text" name="installment" id="installment" class="form-control"
+                                        placeholder="₹12500">
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary"
+                                    data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Pay</button>
+                            </div>
+                        </form>
+                        </div>
+                    </div>
+                    </div>
+                </div>    
+            </div>
+        </div>
+        </div>
+        {% endif %} 
+      </div>
+      <div class="row">
+        <div class="col">
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>Payment ID</th>
+                        <th>Proof</th>
+                        <th>Paid date</th>
+                        <th>Installment</th>
+                    </tr>
+                </thead>
+                <tbody id="myTable">
+                    
+                    {% if student_payment_entry|length != 0%}
+                        {% for entry in student_payment_entry %}
+                        <tr>
+                            <td>{{entry.payment_id}}</td>
+                            <td><img src="{{entry.proof.url}}" width="100px" alt="" srcset=""></td>
+                            <td>{{entry.paid_date}}</td>
+                            <td>{{entry.installment}}</td>
+                        </tr>
+                        {% endfor %}
+                    {% else %}
+                    <tr>
+                        <td colspan="5" class="text-center lead fw-bold">No payment entry found.</td>
+                    </tr>
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    {% endif %}
+
+</div>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 {% endblock %}
