--- a/Projects/Project-Design-Development/employee/templates/employee/employee_mybatch.html
+++ b/Projects/Project-Design-Development/employee/templates/employee/employee_mybatch.html
@@ -5,6 +5,7 @@ MyBatch
 {% endblock %}
 
 {% block content %}
+
 <div class="container my-3">
     <table class="table table-dark">
         <thead>
@@ -33,8 +34,39 @@ MyBatch
                 {% endfor %}
             </ul>
         </div>
+        <!-- Button trigger modal for add global note -->
         <div class="col-lg-2 col-md-2">
-            <a href="" class="btn btn-dark">Add Global Note</a>
+            <a href="" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">Add Global Note</a>
+        </div>
+
+        <!-- Modal for add global note -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Add Global Notes</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form action="{% url "add_global_note" %}" method="post">
+                    {% csrf_token %}
+                    <div class="modal-body">
+                        <label for="studnetid">Student Id : </label>
+                        <select name="student_id" id="studnetid" class="form-select">
+                            <option value="">select student</option>
+                            {% for student in students %}
+                                <option value="{{student.student_id_id}}">{{student.student_id}}</option>
+                            {% endfor %}
+                        </select>
+                        <label for="comment">Comment : </label>
+                        <textarea name="comment" id="comment" class="form-control" rows="5"></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Add Note</button>
+                    </div>
+                </form>
+            </div>
+            </div>
         </div>
     </div>
     <p class="text-danger">Global Notes:</p>
@@ -52,7 +84,7 @@ MyBatch
             <tr>
                 <td>{{student.student_id_id}}</td>
                 <td>{{student.student_id_id}}</td>
-                <td>{{student.student_id_id}}</td>
+                <td>comment</td>
                 <td>
                     <a href=""><i class="bi bi-pencil-square"></i></a> ||
                     <a href=""><i class="bi bi-trash3"></i></a>
