--- a/Projects/Project-Design-Development/employee/templates/employee/employee_student_batch_action.html
+++ b/Projects/Project-Design-Development/employee/templates/employee/employee_student_batch_action.html
@@ -4,32 +4,35 @@
 Batch-Action-View
 {% endblock %}
 
-
 {% block content %}
-        <table class="table table-dark my-3">
-            <thead>
-                <th>Batch name</th>
-                <th>Start/End date</th>
-                <th>Technology</th>
-                <th>Global Note</th>
-            </thead>
-        </table>
-        {% comment %} {% for batch in batches %}
-        <div class="row border mx-auto rounded my-2 p-3">
-            <div class="col-lg-3 col-md-3 p-3 text-break" style="background-color: rgb(234, 234, 234);">
-                {{batch.batch_name}}
-            </div>
-            <div class="col-lg-3 col-md-3 p-3 text-break">
-                <p>{{batch.start_date}}/<br>{{batch.end_date}}</p>
-            </div>
-            <div class="col-lg-4 col-md-4 p-3 text-break">
-                {% for student in students %}
-                {% if batch.batch_id ==  student.batch_id.batch_id %}
-                <li style="list-style-type:decimal-leading-zero;">{{student.student_id.first_name}} {{student.student_id.last_name}}</li>
+<div class="container mt-4">
+  <table class="table table-striped">
+    <thead class="table-dark">
+      <tr>
+        <th>Batch name</th>
+        <th>Start Date</th>
+        <th>End Date</th>
+        <th>Students</th>
+        <th>Global Note</th>
+      </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td rowspan="{{ students|length }}">{{ batch.batch_name }}</td>
+        <td rowspan="{{ students|length }}">{{ batch.start_date }}</td>
+        <td rowspan="{{ students|length }}">{{ batch.end_date }}</td>
+        <td>
+        <ul>
+            {% for student in students %}
+                {% if batch.batch_id == student.batch_id.batch_id %}
+                    <li>{{ student.student_id.first_name }} {{ student.student_id.last_name }}</li>
                 {% endif %}
-                {% endfor %}
-            </div>
-        </div>
-    {% endfor %} {% endcomment %}
-    <h1>Hello world</h1>
+            {% endfor %}
+        </ul>
+        </td>
+        <td rowspan="{{ students|length }}">Note</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
 {% endblock %}
